--- a/ConflictCube/ComponentBased/TexturResource.resx
+++ b/ConflictCube/ComponentBased/TexturResource.resx
@@ -121,6 +121,9 @@
   <data name="FloorTileset" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Tileset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FloorTilesetIceFire" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FloorTileset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="PlayerTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Player.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
