--- a/ConflictCube/ComponentBased/TexturResource.resx
+++ b/ConflictCube/ComponentBased/TexturResource.resx
@@ -127,4 +127,7 @@
   <data name="PlayerTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Player.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="UseFieldIndicator" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Textures\UseFieldIndicator.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
