--- a/ConflictCube/ShaderResources.resx
+++ b/ConflictCube/ShaderResources.resx
@@ -117,20 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="FloorTileset" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Tileset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="FloorTilesetIceFire" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\FloorTileset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="PlayerTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Player.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Swap" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Textures\Swap.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="UseFieldIndicator" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Textures\UseFieldIndicator.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Afterglow" xml:space="preserve">
+    <value>#version 330
+
+uniform vec2 iResolution; //[xResolution, yResolution] of display
+uniform float iGlobalTime; //global time in seconds as float
+uniform float startTime; //Time the shader was first activated on this object
+uniform float direction; //Positive =&gt; up/right; Negative =&gt; down/left
+uniform float lifetime; //How long the effect will be visible
+uniform vec3 desiredColor;
+	
+void main()
+{
+	//create uv to be in the range [0..1]x[0..1]
+	vec2 uv = gl_FragCoord.xy / iResolution;
+
+    //Is the orange which is defined in System.Drawings.Color
+    vec4 color = vec4(desiredColor, 1);
+
+    if(direction &gt; 0.0) 
+    {
+        color.a = uv.x + 0.5;
+    }
+    else
+    {
+        color.a = 1.5 - uv.x;
+    }
+
+    //color.a is 1.5 at maximum (only 1 is to clamped)
+    color.a -= (iGlobalTime - startTime) / (1.5 / (1.0 / lifetime));
+
+	gl_FragColor = color;
+}</value>
   </data>
 </root>
