--- a/ConflictCube/ResxFiles/TexturResource.resx
+++ b/ConflictCube/ResxFiles/TexturResource.resx
@@ -124,8 +124,14 @@
   <data name="FloorTilesetIceFire" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FloorTileset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="NewPlayerTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Textures\Fireman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="PlayerTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Player.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SpritesheetNewTextures" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Textures\SpritesheetNewTextures.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Swap" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Textures\Swap.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
