--- a/ConflictCube/ResxFiles/LevelsWithNewTileset.resx
+++ b/ConflictCube/ResxFiles/LevelsWithNewTileset.resx
@@ -124,4 +124,13 @@
   <data name="FireIceSecondTestNewTileset" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FireIceSecondTestNewTileset.tmx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="XShiftTest" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\XShiftTest.tmx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="XYShiftTest" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\XYShiftTest.tmx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="YShiftTest" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\YShiftTest.tmx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
