Added win screen and more levels in the level select.

--- a/ConflictCube/ResxFiles/TexturResource.resx
+++ b/ConflictCube/ResxFiles/TexturResource.resx
@@ -118,14 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="FiremanTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Textures\Fireman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="FloorTileset" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Tileset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="FloorTilesetIceFire" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FloorTileset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="NewPlayerTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Textures\Fireman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="PlayerTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Player.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -138,5 +138,8 @@
   </data>
   <data name="UseFieldIndicator" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Textures\UseFieldIndicator.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="WelderTexture" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Textures\welder.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
