--- a/ConflictCube/ResxFiles/LevelsWithNewTileset.resx
+++ b/ConflictCube/ResxFiles/LevelsWithNewTileset.resx
@@ -124,6 +124,15 @@
   <data name="FireIceSecondTestNewTileset" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FireIceSecondTestNewTileset.tmx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="level1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\level1.tmx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="level3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\level3.tmx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="tutlevel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tutlevel.tmx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="XShiftTest" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\XShiftTest.tmx;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
