Added ParticleSystem. Added New Levels. Added PlayerStartPositions in file. Added more shaders. Fixxed various bugs.

--- a/ConflictCube/ResxFiles/ParticleSystemResources.resx
+++ b/ConflictCube/ResxFiles/ParticleSystemResources.resx
@@ -117,194 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Afterglow" xml:space="preserve">
-    <value>#version 330
-
-uniform vec2 iResolution; //[xResolution, yResolution] of display
-uniform float iGlobalTime; //global time in seconds as float
-uniform float startTime; //Time the shader was first activated on this object
-uniform float direction; //Positive =&gt; up/right; Negative =&gt; down/left
-uniform float lifetime; //How long the effect will be visible
-uniform vec3 desiredColor;
-	
-in vec2 uv;
-
-void main()
-{
-    //create uv to be in the range [0..1]x[0..1]
-	//vec2 uv = gl_FragCoord.xy / iResolution;
-
-    //gl_FragColor = vec4(vec3(min(distance(uv, vec2(1)), distance(uv, vec2(0)))), 1);
-
-    //gl_FragColor = vec4(uv, 0, 1);
-    //return;
-
-    //gl_FragColor = vec4(1, 1, 1, 1);
-
-    //Is the orange which is defined in System.Drawings.Color
-    vec4 color = vec4(desiredColor, 1);
-
-    if(direction &gt; 0.0) 
-    {
-        color.a = uv.x + 0.5;
-    }
-    else
-    {
-        color.a = 1.5 - uv.x;
-    }
-
-    //color.a is 1.5 at maximum (only 1 is to clamped)
-    color.a -= (iGlobalTime - startTime) / (1.5 / (1.0 / lifetime));
-
-	gl_FragColor = color;
-}</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="IceParticle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Particles\IceParticle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="FragmentTest" xml:space="preserve">
-    <value>#version 330
-
-uniform vec2 iResolution; //[xResolution, yResolution] of display
-uniform float iGlobalTime; //global time in seconds as float
-uniform float startTime; //Time the shader was first activated on this object
-uniform float direction; //Positive =&gt; up/right; Negative =&gt; down/left
-uniform float lifetime; //How long the effect will be visible
-uniform vec3 desiredColor;
-	
-in vec2 uv;
-
-void main()
-{
-    gl_FragColor = vec4(vec3(min(distance(uv, vec2(1)), distance(uv, vec2(0)))), 1);
-}</value>
+  <data name="MagmaParticle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Particles\MagmaParticle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Liquid" xml:space="preserve">
-    <value>#version 330
-
-uniform vec2 iResolution; //[xResolution, yResolution] of display
-uniform float iGlobalTime; //global time in seconds as float
-uniform sampler2D tex;
-uniform float minXuv;
-uniform float maxXuv;
-uniform float minYuv;
-uniform float maxYuv;
-
-
-in vec2 pos;
-in vec2 uv;
-
-float rand(float seed)
-{
-	return fract(sin(seed) * 1231534.9);
-}
-
-vec2 scaleBack(in vec2 toScale) 
-{
-    vec2 scaledVec = vec2(0);
-    scaledVec.x = toScale.x * (maxXuv - minXuv) + minXuv;
-    scaledVec.y = toScale.y * (maxYuv - minYuv) + minYuv;
-
-    return scaledVec;
-}
-
-vec2 wobblePoint(in vec2 uvCoords) 
-{
-    uvCoords.x = uvCoords.x + (0.04 * cos(6.0 * uvCoords.y)) * sin(iGlobalTime);
-
-    if(uvCoords.x &gt; 1.0) 
-    {
-        uvCoords.x = 1.0 - fract(uvCoords.x);
-    }
-
-    if(uvCoords.x &lt; 0.0) 
-    {
-        uvCoords.x = -uvCoords.x;
-    }
-
-
-    uvCoords.y = uvCoords.y + (0.04 * sin(6.0 * uvCoords.x)) * cos(iGlobalTime);
-
-    if(uvCoords.y &gt; 1.0) 
-    {
-        uvCoords.y = 1.0 - fract(uvCoords.y);
-    }
-
-    if(uvCoords.y &lt; 0.0) 
-    {
-        uvCoords.y = -uvCoords.y;
-    }
-
-    return uvCoords;
-}
-
-vec4 averageColorIn3x3Field(vec2 center) 
-{
-    float delta = 0.01;
-
-    vec4 color = vec4(0);
-
-    for(int x = -1; x &lt;= 1; x++)
-    {
-        for(int y = -1; y &lt;= 1; y++)
-        {
-            color += texture2D(tex, center + vec2(x, y));
-        }
-    }
-
-    return color / 9.0;
-}
-
-void main()
-{
-    //Texture out of sprite sheet -&gt; uv coords are not from 0..1 and should not be
-    vec2 scaledUv = vec2((uv.x - minXuv) * (1.0 / (maxXuv - minXuv)), 
-                         (uv.y - minYuv) * (1.0 / (maxYuv - minYuv)));
-
-    vec2 xMirroredUv = vec2(1.0 - scaledUv.x, scaledUv.y);
-    vec2 yMirroredUv = vec2(scaledUv.y, 1.0 - scaledUv.y);
-    vec2 xyMirroredUv = vec2(xMirroredUv.x, yMirroredUv.y);
-
-    float weightX = (abs(0.5 - xMirroredUv.x)) / 2;
-    float weightY = (abs(0.5 - xMirroredUv.y)) / 2;
-    float weightXY = distance(vec2(0.5), xyMirroredUv) / 2;
-    float weightThis = 1.0 - weightX;
-
-    
-    scaledUv = wobblePoint(scaledUv);
-    xMirroredUv = wobblePoint(xMirroredUv);
-    yMirroredUv = wobblePoint(yMirroredUv);
-    xyMirroredUv = wobblePoint(xyMirroredUv);
-    
-
-    scaledUv = scaleBack(scaledUv);
-    xMirroredUv = scaleBack(xMirroredUv);
-    yMirroredUv = scaleBack(yMirroredUv);
-    xyMirroredUv = scaleBack(xyMirroredUv);
-
-    vec4 thisColor = texture2D(tex, scaledUv) * weightThis;
-    vec4 xMirroredColor = averageColorIn3x3Field(xMirroredUv) * weightX;
-    vec4 yMirroredColor = averageColorIn3x3Field(yMirroredUv) * weightY;
-    vec4 xyMirroredColor = averageColorIn3x3Field(xyMirroredUv) * weightXY;
-
-    gl_FragColor = thisColor + xMirroredColor + yMirroredColor + xyMirroredColor;
-}</value>
-  </data>
-  <data name="StandardVertexShader" xml:space="preserve">
-    <value>#version 330
-
-uniform mat4 camera;
-
-in vec2 uvPos;
-in vec2 position;
-
-out vec2 uv;
-out vec2 pos;
-	
-void main()
-{
-    uv = uvPos;
-    pos = position;
-    gl_Position = camera * vec4(position, 0, 1);
-    
-    //gl_Position = vec4(-position, 0, 1);
-}</value>
+  <data name="Particle_Sprite_Smoke_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Particles\Particle-Sprite-Smoke-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
