Added footsteps and bg music

--- a/ConflictCube/ResxFiles/AudioResources.resx
+++ b/ConflictCube/ResxFiles/AudioResources.resx
@@ -118,11 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Audio\Background.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="BirdWhistle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Audio\BirdWhistle.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Walking" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Audio\Walking.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="WalkingFast" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Audio\WalkingFast.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="_05___Manowar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\05 - Manowar.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
